--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Comic Neue', cursive;
 }
 
 .navbar {
@@ -42,6 +42,12 @@ body {
   opacity: 0.7;
   border-radius: 10px;
   padding: 3rem;
+}
+
+.inside-first-div h1 {
+  font-size: 25px;
+  font-weight: bold;
+  font-family: font-family: 'Source Sans Pro', sans-serif;
 }
 
 .footer-input {
@@ -132,6 +138,11 @@ body {
   text-align: center;
   margin-top: 3rem;
   margin-bottom: 3rem;
+}
+
+.middle-div h1 {
+  font-size: 25px;
+  font-weight: bold;
 }
 
 .grid-container {
